# toroidal-rotate

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
scripts/: make_showcase_gif.py
src/toroidal_rotate/: __init__.py  core.py
tests/: test_core.py
