[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toroidal-rotate"
version = "0.1.0"
description = "Deterministic reversible toroidal pseudo-rotation for NumPy images"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["numpy", "image-processing", "toroidal", "rotation", "permutation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/MarcelDev-u/toroidal-rotate"
Repository = "https://github.com/MarcelDev-u/toroidal-rotate"
Issues = "https://github.com/MarcelDev-u/toroidal-rotate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
